--- a/test/fixtures/merchants.yml
+++ b/test/fixtures/merchants.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: MyString
-  email: MyString
-
-two:
-  username: MyString
-  email: MyString
+merchant_one:
+  username: merchant_one
+  email: merchant_one@example.com
