updated category fixture

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,6 +11,9 @@ batarang:
   price: 40.00
   description: The only weapon you'll ever need.
   merchant: merchant_one
+  categories:
+    - memorabilia
+    - awesome
 
 lasso:
   name: Lasso of Truth
@@ -18,3 +21,6 @@ lasso:
   price: 234.99
   description: Lasso
   merchant: merchant_one
+  categories:
+      - memorabilia
+      - awesome
