--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -4,8 +4,8 @@ one:
   customer_name: Peter Parker
   customer_email: iluvheros@fan.net
   credit_card: 1234567891011121
-  CVV: 987
-  CC_expiration: 09/35
+  cvv: 987
+  cc_expiration: 09/35
   status: pending
   shipping_address: 1234 Lovelace Ave Seattle WA 98103
   billing_address: 98103
@@ -14,8 +14,8 @@ two:
   customer_name: Jane Foster
   customer_email: desertphenom@smartypants.com
   credit_card: 9876543210111213
-  CVV: 786
-  CC_expiration: 03/23
+  cvv: 786
+  cc_expiration: 03/23
   status: pending
   shipping_address: 109 Desert Road Nowhere AZ 29843
   billing_address: 29843
