Write and test merchant_order_items in Merchant model

--- a/test/fixtures/merchants.yml
+++ b/test/fixtures/merchants.yml
@@ -5,3 +5,9 @@ merchant_one:
   email: merchant_one@example.com
   uid: 1
   provider: :google_oauth2
+
+batambaman:
+  username: batambaman
+  email: thebatambaman@gmail.com
+  uid: 2
+  provider: :google_oauth2
